--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -91,7 +91,7 @@ abbr
   :color #990000
   
 // Success/Failure flash notice divs
-div.success, div.error
+div.success, div.error, div.notice
   :font-size 1.1em
   :margin-bottom 10px
   :padding 10px 15px
@@ -106,6 +106,9 @@ div.error
 noscript div.error
   :margin 20px 10px
   :font-size 2em
+div.notice
+  :background-color #FFE45C
+  :border 1px solid #FED22F
   
 // Tooltip
 #tooltip
