"Juggernaut" header text doesn't match

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
     #wrapper.clearfix
       #top-menu.clearfix
         %ul
-          %li= link_to "Juggernaut (US-Mal'Ganis Horde)", 'http://www.juggernautguild.com/'
+          %li= link_to "Juggernaut (Mal'Ganis US Horde)", 'http://www.juggernautguild.com/'
         %ul#right
           %li= link_to 'Home', 'http://www.juggernautguild.com/index.php?act=home'
           %li= link_to 'About Us', 'http://www.juggernautguild.com/index.php?showtopic=13476'
