Add Zone/Boss info to Items#show

--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -88,6 +88,7 @@
   #content
     :margin-left 325px
   
+// Members#show ---------------------------------------------------------------
 #members
   #stats
     :text-align center
