--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -8,6 +8,8 @@
   });
 
 %h2= breadcrumb link_to('Items', items_path), link_to_wowhead(@item)
+- unless @loot_table.nil?
+  %h3= "Dropped by #{@loot_table.parent.object.name} in #{@loot_table.parent.parent.object.name}"
 #item_tabs
   %ul
     %li= link_to_tab("Loots (#{@loots.size})", '#t-loots')
