--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -35,7 +35,8 @@ h2
   :padding 2px 10px 1px 0
   a
     :text-decoration none
-    
+h3
+  :margin-bottom 10px
 h4
   :font-size 1.3em
   :margin 15px 0 3px 0
