--- a/app/views/achievements/index.html.haml
+++ b/app/views/achievements/index.html.haml
@@ -13,5 +13,5 @@
       %tr{ :class => cycle('even', 'odd') }
         %td= link_to_member(member)
         - @achievements.each do |ach|
-          %td.icon= image_tag('error.png', :alt => 'Incomplete', :title => "#{member.name} - #{ach.title}") unless member.achievements.include? ach
+          %td.icon= image_tag('error.png', :alt => 'Incomplete', :class => 'help', :title => "#{member.name} - #{ach.title}") unless member.achievements.include? ach
               
