--- a/app/views/members/_achievements.html.haml
+++ b/app/views/members/_achievements.html.haml
@@ -9,4 +9,4 @@
       %tr{ :class => cycle('even', 'odd') }
         %td.icon= achievement_icon(ach)
         %td= h(ach.title)
-        %td= member_completed_achievement(ach, @member)
+        %td= h(member_completed_achievement(ach, @member))
