Warn a member if an item on their wishlist has been recently looted.
This takes into account the type of loot, so that if a member won a best in slot helm token, but still wants one on sit, they won't get warned about it.

--- a/app/views/members/_wishlist.html.haml
+++ b/app/views/members/_wishlist.html.haml
@@ -5,6 +5,7 @@
       minChars: 2,
       autoFill: true
     });
+    $('.help').tooltip({ showURL: false });
   });
 %table#wishlists.list.tablesorter
   %thead
@@ -16,7 +17,7 @@
       %th.image &nbsp;
   %tbody#wishlist
     - @wishlists.each do |wishlist|
-      = render :partial => "wishlists/wishlist_row", :object => wishlist
+      = render :partial => "wishlists/wishlist_row", :object => wishlist, :locals => { :recent_loots => @recent_loots }
 %br
 #wishlist-edit{ :style => "display: none" }'
 = render :partial => 'wishlists/form_inline'
