--- a/app/views/wishlists/_wishlist_row.html.haml
+++ b/app/views/wishlists/_wishlist_row.html.haml
@@ -1,5 +1,7 @@
 %tr{ :class => cycle('even', 'odd') }[wishlist_row]
-  %td= link_to_item_with_stats(wishlist_row.item) unless wishlist_row.item_id.nil?
+  %td
+    = warn_if_recently_looted(wishlist_row, recent_loots) if defined? recent_loots
+    = link_to_item_with_stats(wishlist_row.item) unless wishlist_row.item_id.nil?
   %td= h(wishlist_row.priority.titlecase)
   %td= truncate(h(wishlist_row.note), :length => 80)
   %td= h(wishlist_row.item.item_stat.slot) unless wishlist_row.item_id.nil? or wishlist_row.item.item_stat_id.nil?
