--- a/app/views/wishlists/_form_inline.html.haml
+++ b/app/views/wishlists/_form_inline.html.haml
@@ -8,4 +8,4 @@
         = styled_button(:type => 'submit', :text => 'Save', :image => 'tick.png')
         = link_to_function(image_tag('cancel.png') + 'Cancel', "$('#wishlist-new').hide(); $('#wishlist-toggle').show()")
 #wishlist-toggle.buttons
-  = link_to_function(image_tag('add.png') + 'Add Entry', "$('#wishlist-new').show(); $('#wishlist_item_name').focus(); $('#wishlist-toggle').hide()")
+  = link_to_function(image_tag('add.png') + 'Add Entry', 'wishlistAddForm()')
