--- a/public/stylesheets/sass/tables.sass
+++ b/public/stylesheets/sass/tables.sass
@@ -32,6 +32,12 @@ table.list
       :color = !table_border_color
     img
       :vertical-align bottom
+    ul.actions
+      :display none
+      :float right
+      :list-style-type none
+      li
+        :display inline
   td.user-missing
     :background url(/images/user_delete.png) no-repeat center right
   tbody
