--- a/app/views/loots/index.html.haml
+++ b/app/views/loots/index.html.haml
@@ -1,3 +1,4 @@
+= render :partial => 'loots/context_menu' if admin?
 = will_paginate @loots
 %br
 %table.list
@@ -8,18 +9,13 @@
       %th Notes
       %th.date Raid
       %th.number Price
-      - if admin?
-        %th.icon Actions
   %tbody
     - @loots.each do |loot|
-      %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }
-        %td= link_to_item_with_stats(loot.item)
+      %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }[loot]
+        %td[loot.item]= link_to_item_with_stats(loot.item)
         %td= link_to_member(loot.member)
         %td= loot_tell_types(loot)
         %td.date= link_to h(loot.purchased_on), raid_path(loot.raid) unless loot.raid.nil?
         %td.number= loot_factor(loot.adjusted_price)
-        - if admin?
-          %td.icon
-            = link_to(image_tag('edit.png'), edit_loot_path(loot))
 %br
 = will_paginate @loots
