--- a/app/views/raids/show.html.haml
+++ b/app/views/raids/show.html.haml
@@ -17,6 +17,7 @@
             = raid_attendance_colored(att.attendance)
             = link_to_member(att.member)
 #drops
+  = render :partial => 'loots/context_menu' if admin?
   %h2= breadcrumb "Loots (#{@raid.loots.size})"
   %table#loot.list.tablesorter
     %thead
@@ -27,8 +28,8 @@
         %th.number Price
     %tbody#itemfilter
       - @loots.each do |loot|
-        %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }
-          %td= link_to_item_with_stats(loot.item)
+        %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }[loot]
+          %td[loot.item]= link_to_item_with_stats(loot.item)
           %td.member= link_to_member(loot.member)
           %td= loot_tell_types(loot)
           %td.number= loot_factor(loot.adjusted_price)
