--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -87,6 +87,17 @@
         :padding 2px
   #content
     :margin-left 325px
+    
+// Index#index ----------------------------------------------------------------
+#index
+  .record_group
+    :min-width 250px
+    :width 20%
+    :display block
+    :float left
+    :margin 0 20px 0 0
+    h4
+      :margin 0 0 2px 0
   
 // Members#show ---------------------------------------------------------------
 #members
