--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -60,7 +60,7 @@
           %td= link_to_item_with_stats(item)
           %td.number= h(item.loots_count)
 .record_group
-  %h4 Most Common Tokens
+  %h4 Most Common Tier Tokens
   %table.list
     %thead
       %tr
