--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -51,7 +51,7 @@ abbr, .help
   
 // WoW item color overrides
 #wrapper .q1, #wrapper .q1 a
-  :color = #FFFFFF - 90 !important
+  :color = #000000 !important
   
 // WoW Class Colors
 .Death_Knight, .Death, .Knight
