--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -47,51 +47,7 @@
         %td.attendance= loot_factor(group.avg_sitlf.to_f)
         
 %h2= breadcrumb 'Records'
-.record_group
-  %h4 Most Common Items
-  %table.list
-    %thead
-      %tr
-        %th Item
-        %th.number Loots
-    %tbody
-      - @common_items.each do |item|
-        %tr{ :class => cycle('even', 'odd') }
-          %td= link_to_item_with_stats(item)
-          %td.number= h(item.loots_count)
-.record_group
-  %h4 Most Common Tier Tokens
-  %table.list
-    %thead
-      %tr
-        %th Item
-        %th.number Loots
-    %tbody
-      - @common_tokens.each do |item|
-        %tr{ :class => cycle('even', 'odd') }
-          %td= link_to_item_with_stats(item)
-          %td.number= h(item.loots_count)
-.record_group
-  %h4 Most Wanted Items
-  %table.list
-    %thead
-      %tr
-        %th Item
-        %th.number Wishlists
-    %tbody
-      - @common_wishlists.each do |item|
-        %tr{ :class => cycle('even', 'odd') }
-          %td= link_to_item_with_stats(item)
-          %td.number= h(item.wishlists_count)
-.record_group
-  %h4 Oldest Active Members
-  %table.list
-    %thead
-      %tr
-        %th Member
-        %th.number First Raid
-    %tbody
-      - @oldest_members.each do |member|
-        %tr{ :class => cycle('even', 'odd') }
-          %td= link_to_member(member)
-          %td.number= h(member.first_raid)
+- @stat_groups.each do |partial, group|
+  .record_group
+    %h4= h(group[:header])
+    = render :partial => "index/#{partial.to_s}", :object => group[:data]
