--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -91,11 +91,10 @@
 // Index#index ----------------------------------------------------------------
 #index
   .record_group
-    :min-width 250px
-    :width 20%
+    :min-width 300px
     :display block
     :float left
-    :margin 0 20px 0 0
+    :margin 0 15px 15px 0
     h4
       :margin 0 0 2px 0
   
