--- a/app/views/index/_most_wishlists.html.haml
+++ b/app/views/index/_most_wishlists.html.haml
@@ -4,7 +4,7 @@
       %th Item
       %th.number Wishlists
   %tbody
-    - common_wishlists.each do |item|
+    - most_wishlists.each do |item|
       %tr{ :class => cycle('even', 'odd') }
         %td= link_to_item_with_stats(item)
         %td.number= h(item.wishlists_count)
