More Records/Stats
- Add an IndexStat model for some more complicated calculations.
- Give Member a 'with_class' scope, to eliminate nil wow_class values
- Make the max-widthe of the overall layout 95%, up from 90%
- Changed the calculation for 'Worst Recruits', it's now the total number declined/total in the system

--- a/app/views/index/_worst_recruits.html.haml
+++ b/app/views/index/_worst_recruits.html.haml
@@ -4,7 +4,7 @@
       %th Class
       %th.number Declined
   %tbody
-    - worst_recruits.each do |wow_class, count|
+    - worst_recruits.each do |wow_class, percent|
       %tr{ :class => cycle('even', 'odd') }
         %td{ :class => wow_class }= wow_class.titlecase
-        %td.number= h(count)
+        %td.number== #{(percent * 100).floor}%
