Make method of populating stat block data less retarded.

--- a/app/views/index/_loots_per_raid.html.haml
+++ b/app/views/index/_loots_per_raid.html.haml
@@ -1,8 +1,9 @@
+%h4 Average Loots Per Raid Attended
 %table.list
   %thead
     %tr
       %th Member
-      %th.number Loots/day
+      %th.number Average
   %tbody
     - loots_per_raid.each do |member|
       %tr{ :class => cycle('even', 'odd') }
