--- a/public/stylesheets/sass/constants.sass
+++ b/public/stylesheets/sass/constants.sass
@@ -9,7 +9,25 @@
 !header_background   = #8A4040
 !header_color        = #F8F8F8
 
+!main_menu_hover_color    = #000000
+!main_menu_selected_color = #555555
+
 !wrapper_background = #FFFFFF
 
-!table_border_color      = #E4E4E4
-!table_header_background = #EEEEEE
+!table_border_color        = #E4E4E4
+!table_header_background   = #EEEEEE
+!table_odd_row_color       = #FFFFFF
+!table_even_row_color      = #F6F7F8
+!table_highlight_row_color = #FFFFDD
+
+!positive_color = #249901
+!negative_color = #990000
+
+!success_background   = #DFF2D9
+!success_border_color = #84CD6E
+!success_color        = !positive_color
+!error_background     = #FAD3C5
+!error_border_color   = #F03A31
+!error_color          = !error_border_color
+!notice_background    = #FFE45C
+!notice_border_color  = #FED22F
