--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -61,10 +61,10 @@
       :text-decoration none
       &:hover
         :background = !wrapper_background
-        :color #000000
+        :color = !main_menu_hover_color
       &.selected, &.selected:hover
         :background = !wrapper_background
-        :color #555555
+        :color = !main_menu_selected_color
         
 // Main (Content) -------------------------------------------------------------
 #main
