--- a/app/views/index/_most_wishlists.html.haml
+++ b/app/views/index/_most_wishlists.html.haml
@@ -5,7 +5,7 @@
       %th Item
       %th.number Wishlists
   %tbody
-    - most_wishlists.each do |item|
+    - most_wishlists.each do |item_id, count|
       %tr{ :class => cycle('even', 'odd') }
-        %td= link_to_item_with_stats(item)
-        %td.number= h(item.wishlists_count)
+        %td= link_to_item_with_stats(Item.find(item_id))
+        %td.number= h(count)
