Parse new Ulduar achievements; Naxx is done-zo.

--- a/public/stylesheets/sass/tables.sass
+++ b/public/stylesheets/sass/tables.sass
@@ -100,5 +100,9 @@ th.icon, td.icon
   :text-align center
   :width 16px
   :padding 0
+th.bullet, td.bullet
+  :text-align center
+  :width 10px
+  :padding 0
 th.center, td.center
   :text-align center
