--- a/app/views/achievements/index.html.haml
+++ b/app/views/achievements/index.html.haml
@@ -7,11 +7,10 @@
     %tr
       %th &nbsp;
       - @achievements.each do |ach|
-        %th.icon= achievement_icon(ach)
+        %th.bullet= achievement_icon(ach)
   %tbody#achievements
     - @members.each do |member|
       %tr{ :class => cycle('even', 'odd') }
         %td= link_to_member(member)
         - @achievements.each do |ach|
-          %td.icon= image_tag('error.png', :alt => 'Incomplete', :class => 'help', :title => "#{member.name} - #{ach.title}") unless member.achievements.include? ach
-              
+          %td.bullet= image_tag('bullet_yellow.png', :alt => 'Incomplete', :class => 'help', :title => "#{member.name} - #{ach.title}") unless member.achievements.include? ach
