Change roster link

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
           %li= link_to 'Joining', 'http://www.juggernautguild.com/index.php?showtopic=13475'
           %li= link_to 'Forums', 'http://www.juggernautguild.com/index.php?act=idx'
           %li= link_to 'Calendar', 'http://www.juggernautguild.com/index.php?act=calendar'
-          %li= link_to 'Roster', 'http://www.wowarmory.com/guild-info.xml?r=Mal%27Ganis&n=Juggernaut+II&p=1'
+          %li= link_to 'Roster', 'http://www.wowarmory.com/guild-info.xml?r=Mal%27Ganis&n=Juggernaut&p=1'
           %li= link_to 'LF', 'http://www.juggernautguild.com/index.php?showforum=23'
       #header.clearfix
         #main-menu.clearfix
