--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'
     = javascript_include_tag 'jquery.ui', 'jquery.tablesorter.min', 'jquery.tooltip', 'jquery.autocomplete', 'jquery.contextmenu', :cache => 'jquery'
     = javascript_include_tag 'application'
-    = javascript_include_tag 'http://www.wowhead.com/widgets/power.js'
+    = javascript_include_tag 'http://static.wowhead.com/widgets/power.js'
     
     = stylesheet_link_tag 'application', 'basic', 'buttons', 'forms', 'layout', 'tables', 'tabs', :cache => 'default'
 
