Trying to fix the font resizing

--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -5,7 +5,7 @@
   :margin 0
 
 body
-  :font-size 68%
+  :font-size 68% !important
   :font-family = !default_font_family
   :margin 0
   :padding 0
