--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
 %html{html_attrs('en-US')}
   %head
     %title= truncate(@page_title || page_title, :length => 150)
-    = stylesheet_link_tag 'application', 'basic', 'buttons', 'forms', 'layout', 'tables', 'tabs', :cache => 'default'
+    = stylesheet_link_tag 'basic', 'buttons', 'forms', 'layout', 'tables', 'tabs', 'application', :cache => 'default'
     = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'
     = javascript_include_tag 'jquery.ui', 'jquery.tablesorter.min', 'jquery.tooltip', 'jquery.autocomplete', 'jquery.contextmenu', :cache => 'jquery'
     = javascript_include_tag 'application'
