Add a link to the Fragment item page in the progress box

--- a/app/views/index/_fragment_progress.html.haml
+++ b/app/views/index/_fragment_progress.html.haml
@@ -1,4 +1,4 @@
-%h4 Fragments of Val'anyr
+%h4= link_to_item_with_stats(Item.find_by_name("Fragment of Val'anyr")) + " Progress"
 %table.list
   %thead
     %tr
