--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -19,7 +19,9 @@
           - item.object.wishlists.each do |wishlist|
             - if wishlist.member.active?
               %tr{ :class => cycle('even', 'odd') }
-                %td.member{ :style => 'max-width: 150px' }= link_to_member(wishlist.member)
+                %td.member{ :style => 'max-width: 150px' }
+                  = warn_if_recently_looted(wishlist, @recent_loots)
+                  = link_to_member(wishlist.member)
                 %td{ :style => 'width: 60%' }= h(wishlist.note)
                 %td{ :style => 'width: 100px'}= h(wishlist.priority.titlecase)
                 %td.lootfactor= loot_factor(wishlist.member.lf_type(wishlist.priority))
@@ -40,4 +42,5 @@
     wishlistMenu(#{@zone.id}, #{@boss.id});
     wishlistHideUnwanted();
     wishlistSortTables();
+    $('.help').tooltip({ showURL: false });
   });
