--- a/app/views/loots/new.html.haml
+++ b/app/views/loots/new.html.haml
@@ -1,12 +1,10 @@
 :javascript
   $(document).ready(function() {
     $('#loot_item_name').autocomplete('/search/items.ac', {
-      minChars: 2,
-      autoFill: true
+      minChars: 2
     });
     $('#loot_member_name').autocomplete('/search/members.ac', {
-      minChars: 1,
-      autoFill: true
+      minChars: 1
     });
   });
 %h2= breadcrumb link_to('Loot', loots_path), 'New'
