--- a/app/views/wishlists/_wishlist_row.html.haml
+++ b/app/views/wishlists/_wishlist_row.html.haml
@@ -4,7 +4,7 @@
     = link_to_item_with_stats(wishlist_row.item) unless wishlist_row.item_id.nil?
   %td= h(wishlist_row.priority.titlecase)
   %td= truncate(h(wishlist_row.note), :length => 80)
-  %td= h(wishlist_row.item.item_stat.slot) unless wishlist_row.item_id.nil? or wishlist_row.item.item_stat_id.nil?
+  %td= h(wishlist_row.item.slot)
   %td.image{ :width => "48px" }
     = link_to_function(image_tag('edit.png'), "wishlistEditForm('#{edit_member_wishlist_path(@member, wishlist_row)}')")
     = link_to_remote_delete(wishlist_row, :url => member_wishlist_path(@member, wishlist_row))
