--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -3,7 +3,7 @@
   - @items.each do |item|
     %div[item]
       %h4
-        = link_to_function(image_tag('clipboard.png'), "wishlistCopy(#{item.id})")
+        = link_to_function(image_tag('clipboard.png'), "wishlistCompare(#{item.id})")
         %span= link_to_item_with_stats(item.object)
         - unless item.note.nil?
           = "(#{h(item.note)})"
