--- a/app/views/wishlists/_form.html.haml
+++ b/app/views/wishlists/_form.html.haml
@@ -1,4 +1,4 @@
-= form.label :item_name, 'Item Name'
+= form.label :item_name, 'Item name or ID'
 = form.text_field :item_name, :class => 'large'
 
 = form.label :note, 'Note'
