--- a/app/views/loots/_form.html.haml
+++ b/app/views/loots/_form.html.haml
@@ -1,4 +1,4 @@
-= form.label :item_name
+= form.label :item_name, 'Item name or ID'
 = form.text_field :item_name, :class => 'medium'
 
 = form.label :member_name, 'Buyer name'
