Add new Item fields to its form

--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -1,2 +1,17 @@
 = form.label :name
 = form.text_field :name
+
+= form.label :wow_id, "WoW ID"
+= form.text_field :wow_id, :class => 'small'
+
+= form.label :color
+= form.text_field :color, :class => 'small'
+
+= form.label :icon
+= form.text_field :icon
+
+= form.label :slot
+= form.text_field :slot
+
+= form.label :level
+= form.text_field :level, :class => 'small'
