Instead of hiding the success flash automatically, make it clickable to fade out.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     :javascript
       $(document).ready(function() {
         $('#main').removeClass('hidden');
-        hideSuccessFlash();
+        clickableFlash();
       });
   %body{:id => controller.controller_name}
     #wrapper.clearfix
