--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -101,6 +101,10 @@ div.success
   :border 1px solid
     :color = !success_border_color
   :color = !success_color
+  :background-image url(/images/cross.png)
+  :background-repeat no-repeat
+  :background-position 99% 50%
+  :cursor pointer
 div.error
   :background-color = !error_background
   :border 1px solid
