Add a decimal to the best attendance listings, to better distinguish them

--- a/app/views/index/_best_attendance.html.haml
+++ b/app/views/index/_best_attendance.html.haml
@@ -8,4 +8,4 @@
     - best_attendance.each do |member|
       %tr{ :class => cycle('even', 'odd') }
         %td= link_to_member(member)
-        %td.number= member_attendance_colored(member.attendance_lifetime)
+        %td.number= "<span class='positive'>#{number_with_precision(member.attendance_lifetime * 100.0, :precision => 1)}%</span>"
