--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -50,7 +50,7 @@ abbr, .help
   :display none
   
 // WoW item color overrides
-#wrapper .q1, #wrapper .q1 a
+#wrapper .q1, #wrapper .q1 a, .ac_results .q1, .ac_results .q1 a
   :color = #000000 !important
   
 // WoW Class Colors
