--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -10,6 +10,7 @@
 %h2= breadcrumb link_to('Items', items_path), link_to_wowhead(@item, :refreshable => true)
 - unless @loot_table.nil?
   %h3= "Dropped by #{@loot_table.parent.object.name} in #{@loot_table.parent.parent.object.name}"
+= render :partial => 'loots/context_menu' if admin?
 #item_tabs
   %ul
     %li= link_to_tab("Loots (#{@loots.size})", '#t-loots')
@@ -24,10 +25,10 @@
           %th.number Price
       %tbody#itemfilter
         - @loots.each do |loot|
-          %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }
+          %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }[loot]
             %td.date= link_to h(loot.purchased_on), raid_path(loot.raid_id) unless loot.raid_id.nil?
             %td.member= link_to_member(loot.member)
-            %td.note= loot_tell_types(loot)
+            %td.note[@item]= loot_tell_types(loot)
             %td.number= loot_factor(loot.adjusted_price)
   #t-wishlists
     %table.list
