Add a button to Loots#edit to fetch what the loot's price should be.
This is a pretty ugly implementation at the moment, I think.

--- a/app/views/loots/_form.html.haml
+++ b/app/views/loots/_form.html.haml
@@ -8,7 +8,8 @@
 = form.select :raid_id, @raids.collect { |r| [r.date, r.id] }, :include_blank => true
 
 = form.label :price
-= form.text_field :price, :class => 'small'
+= form.text_field :price, :class => 'small with-icon'
+= link_to_function(image_tag('find.png'), "findItemPrice('#{price_loot_path(@loot)}')")
 
 .radio-check
   = form.check_box :best_in_slot
