--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -35,6 +35,9 @@ fieldset
   textarea
     :font-family = !default_font_family
     
+  input.with-icon
+    :display inline
+    
   em
     :display block
     :color #5C6163
