--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -114,7 +114,7 @@
       :margin 0
       span.small
         :vertical-align middle
-        :font = 14px Georgia, serif
+        :font = 14px "Georgia", "serif"
         :margin 0 60px 0 -3px
       
 // Wishlist item group --------------------------------------------------------
