Remove a stray apostrophe that's been there for months, apparently.

--- a/app/views/members/_wishlist.html.haml
+++ b/app/views/members/_wishlist.html.haml
@@ -15,5 +15,5 @@
     - @wishlists.each do |wishlist|
       = render :partial => "wishlists/wishlist_row", :object => wishlist, :locals => { :recent_loots => @recent_loots }
 %br
-#wishlist-edit{ :style => "display: none" }'
+#wishlist-edit{ :style => "display: none" }
 = render :partial => 'wishlists/form_inline'
