--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -116,6 +116,11 @@
         :vertical-align middle
         :font = 14px "Georgia", "serif"
         :margin 0 60px 0 -3px
+  #wishlists
+    .wishlist
+      span
+        :color #888
+        :font-size 0.85em
       
 // Wishlist item group --------------------------------------------------------
 div.loot_table
