--- a/app/views/wishlists/_wishlist_row.html.haml
+++ b/app/views/wishlists/_wishlist_row.html.haml
@@ -1,5 +1,5 @@
 %tr{ :class => cycle('even', 'odd') }[wishlist_row]
-  %td.icon= image_tag(wishlist_row.item.wowhead_icon(:small), :class => 'icon') unless wishlist_row.item_id.nil?
+  %td.icon= image_tag(wishlist_row.item.wowhead_icon(:small), :alt => 'Icon') unless wishlist_row.item_id.nil?
   %td.item
     = warn_if_recently_looted(wishlist_row, recent_loots) if defined? recent_loots
     = link_to_item_with_stats(wishlist_row.item) unless wishlist_row.item_id.nil?
